--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.flyway.baseline-on-migrate=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 server.port=8080
+spring.web.resources.add-mappings=true
+spring.mvc.static-path-pattern=/static/**
