--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,19 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+
+	<dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bom</artifactId>
+            <version>2.25.62</version> 
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -71,8 +84,12 @@
 		<dependency> 
 				<groupId>software.amazon.awssdk</groupId>
 				<artifactId>s3</artifactId>
-				<version>2.25.48</version>
 		</dependency>
+		<dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    	<artifactId>selenium-java</artifactId>
+    	<version>4.17.0</version>
+	</dependency>
 	</dependencies>
 
 	<build>
